<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.covid.ui.fragments.fragments.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.covid.ui.fragments.fragments.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.covid.ui.fragments.fragments.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.example.covid.ui.fragments.fragments.EmergenciesFragment"
        android:label="@string/title_emergencies"
        tools:layout="@layout/fragment_emergencies" />
</navigation>